# conan-inchi

./: CMakeLists.txt  README.md  azure-pipelines.yml  conandata.yml  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
